@@ -46,6 +46,13 @@
 #define ZBX_PROTO_TAG_STATUS		"status"
 #define ZBX_PROTO_TAG_TYPE		"type"
 #define ZBX_PROTO_TAG_VALUE		"value"
+#define ZBX_PROTO_TAG_HOSTID		"hostid"
+#define ZBX_PROTO_TAG_AVAILABLE		"available"
+#define ZBX_PROTO_TAG_SNMP_AVAILABLE	"snmp_available"
+#define ZBX_PROTO_TAG_IPMI_AVAILABLE	"ipmi_available"
+#define ZBX_PROTO_TAG_ERROR		"error"
+#define ZBX_PROTO_TAG_SNMP_ERROR	"snmp_error"
+#define ZBX_PROTO_TAG_IPMI_ERROR	"ipmi_error"
 
 #define ZBX_PROTO_VALUE_FAILED		"failed"
 #define ZBX_PROTO_VALUE_SUCCESS		"success"
@@ -54,6 +61,7 @@
 #define	ZBX_PROTO_VALUE_PROXY_CONFIG		"proxy config"
 #define	ZBX_PROTO_VALUE_PROXY_HEARTBEAT		"proxy heartbeat"
 #define ZBX_PROTO_VALUE_DISCOVERY_DATA		"discovery data"
+#define ZBX_PROTO_VALUE_HOST_AVAILABILITY	"host availability"
 #define ZBX_PROTO_VALUE_HISTORY_DATA		"history data"
 #define ZBX_PROTO_VALUE_AUTO_REGISTRATION_DATA	"auto registration"
 #define	ZBX_PROTO_VALUE_SENDER_DATA		"sender data"
