@@ -11,4 +11,5 @@ libzbxtrapper_a_SOURCES = \
 	../nodewatcher/nodesender.c ../nodewatcher/nodesender.h \
 	proxyconfig.c proxyconfig.h \
 	proxydiscovery.c proxydiscovery.h \
-	proxyautoreg.c proxyautoreg.h
+	proxyautoreg.c proxyautoreg.h \
+	proxyhosts.c proxyhosts.h
